<!-- res/layout/activity_main.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <Button
        android:id="@+id/btnDibujo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dibujo" />

    <Button
        android:id="@+id/btnSonido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sonido"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/btnVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/video"
        android:layout_marginTop="16dp" />
</LinearLayout>
