<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Botón para el primer sonido -->
    <Button
        android:id="@+id/soundButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minero"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true" />

    <!-- Botón para el segundo sonido -->
    <Button
        android:id="@+id/soundButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inazuma"
        android:layout_below="@id/soundButton1"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true" />

    <!-- SeekBar para ajustar el volumen -->
    <SeekBar
        android:id="@+id/volumeSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/soundButton2"
        android:layout_marginTop="16dp" />

    <!-- SeekBar para ver y controlar el progreso -->
    <SeekBar
        android:id="@+id/progressSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/volumeSeekBar"
        android:layout_marginTop="16dp" />

    <!-- Botón para volver a la MainActivity -->
    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volver"
        android:layout_below="@id/progressSeekBar"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
